--- a/school.html
+++ b/school.html
@@ -574,9 +574,32 @@
             <li>Vice Chancellor: ${data.data.vice_chancellor}</li>
             <li>Registrar: ${data.data.registra}</li>
           `;
-          document.querySelector("#admission .container").innerHTML = `
-        <p>
-                    Admission to full-time undergraduate programs at the
+        //   document.querySelector("#admission .container").innerHTML = `
+        // <p>
+        //             Admission to full-time undergraduate programs at the
+        //            ${data.data.schoolName}is exclusively through the Unified
+        //             Tertiary Matriculation Examination (UTME) and Direct Entry
+        //             (DE). Applicants must have at least five (5) credits in
+        //             O'Level or equivalent qualifications as specified by the
+        //             relevant department. A minimum UTME score of ${data.schoolrequirement.jamb}s is
+        //             required, and candidates' details must be submitted to the
+        //             University by the Joint Admissions and Matriculation Board
+        //             (JAMB). Additionally, candidates must participate in the
+        //             University POST-UTME Examination and achieve the necessary
+        //             minimum score. The University Admissions Office is
+        //             responsible for processing full-time undergraduate
+        //             admissions only. Other programs, including Foundation,
+        //             Diploma, Distance Learning Institute (DLI), Postgraduate,
+        //             and evening courses, are managed by other university
+        //             departments. Candidates must be at least sixteen (16) years
+        //             old by October 31st of the admission year.
+        // </p>
+        //   `;
+
+            document.querySelector("#admission .container").innerHTML = `
+            <h2>Admission Information</h2>
+            <p>
+                   Admission to full-time undergraduate programs at the
                    ${data.data.schoolName}is exclusively through the Unified
                     Tertiary Matriculation Examination (UTME) and Direct Entry
                     (DE). Applicants must have at least five (5) credits in
@@ -592,24 +615,19 @@
                     Diploma, Distance Learning Institute (DLI), Postgraduate,
                     and evening courses, are managed by other university
                     departments. Candidates must be at least sixteen (16) years
-                    old by October 31st of the admission year.
-        </p>
-          `;
-
-          //   document.querySelector("#admission .container").innerHTML = `
-          //   <h2>Admission Information</h2>
-          //   <p>${data.admission.info}</p>
-          //   <ul>
-          //     <li>JAMB Cut-off Mark: ${data.schoolrequirement.jamb}</li>
-          //     <li>JAMB: ${data.admission.jambPercentage}%</li>
-          //     <li>O'Level: ${data.admission.oLevelPercentage}%</li>
-          //     <li>PUTME: ${data.schoolrequirement.postUtme}%</li>
-          //     <li>Application Deadline: ${data.admission.applicationDeadline}</li>
-          //   </ul>
+                    old by October 31st of the admission year
+              </p>
+            <ul>
+              <li>JAMB Cut-off Mark: ${data.schoolrequirement.jamb}</li>
+              <li>JAMB: ${data.admission.jambPercentage}%</li>
+              <li>O'Level: ${data.admission.oLevelPercentage}%</li>
+              <li>PUTME: ${data.schoolrequirement.postUtme}%</li>
+              <li>Application Deadline: ${data.admission.applicationDeadline}</li>
+            </ul>
           
-          //   <h2>Warnings</h2>
-          //   <p>${data.admission.warnings}</p>
-          // `;
+            <h2>Warnings</h2>
+            <p>${data.admission.warnings}</p>
+          `;
 
           document.querySelector("#student-life .container ul").innerHTML = `
           <li>Sports and Recreation</li>
