--- a/school.html
+++ b/school.html
@@ -532,7 +532,8 @@
 
        async function fetchSchoolData(query) {
            await fetch(
-            `https://young-secretary-shrill-sun-production.pipeops.app/v1/api/school/schoolname/${query}`
+           // `https://young-secretary-shrill-sun-production.pipeops.app/v1/api/school/schoolname/${query}`
+             `http://127.0.0.1:8000/v1/api/school/schoolname/${query}`,
           )
             .then((response) => response.json())
             .then((data) => {
@@ -549,6 +550,7 @@
         document.querySelector("#img .container").innerHTML = "Not found";
         document.querySelector("#About .container p").innerHTML = "Not found";
         document.querySelector("#fees .container ul").innerHTML = "Not found";
+         document.querySelector("#admission .container").innerHTML = "Not found";
         document.querySelector("#administration .container ul").innerHTML = "Not found";
         document.querySelector("#student-life .container ul").innerHTML = "Not found";
         }else{
@@ -574,37 +576,16 @@
             <li>Vice Chancellor: ${data.data.vice_chancellor}</li>
             <li>Registrar: ${data.data.registra}</li>
           `;
-        //   document.querySelector("#admission .container").innerHTML = `
-        // <p>
-        //             Admission to full-time undergraduate programs at the
-        //            ${data.data.schoolName}is exclusively through the Unified
-        //             Tertiary Matriculation Examination (UTME) and Direct Entry
-        //             (DE). Applicants must have at least five (5) credits in
-        //             O'Level or equivalent qualifications as specified by the
-        //             relevant department. A minimum UTME score of ${data.schoolrequirement.jamb}s is
-        //             required, and candidates' details must be submitted to the
-        //             University by the Joint Admissions and Matriculation Board
-        //             (JAMB). Additionally, candidates must participate in the
-        //             University POST-UTME Examination and achieve the necessary
-        //             minimum score. The University Admissions Office is
-        //             responsible for processing full-time undergraduate
-        //             admissions only. Other programs, including Foundation,
-        //             Diploma, Distance Learning Institute (DLI), Postgraduate,
-        //             and evening courses, are managed by other university
-        //             departments. Candidates must be at least sixteen (16) years
-        //             old by October 31st of the admission year.
-        // </p>
-        //   `;
 
             document.querySelector("#admission .container").innerHTML = `
             <h2>Admission Information</h2>
             <p>
                    Admission to full-time undergraduate programs at the
-                   ${data.data.schoolName}is exclusively through the Unified
+                   ${data.data.schoolName} is exclusively through the Unified
                     Tertiary Matriculation Examination (UTME) and Direct Entry
                     (DE). Applicants must have at least five (5) credits in
                     O'Level or equivalent qualifications as specified by the
-                    relevant department. A minimum UTME score of ${data.schoolrequirement.jamb}s is
+                    relevant department. A minimum UTME score of ${data.data.schoolrequirement.jamb} is
                     required, and candidates' details must be submitted to the
                     University by the Joint Admissions and Matriculation Board
                     (JAMB). Additionally, candidates must participate in the
@@ -618,16 +599,21 @@
                     old by October 31st of the admission year
               </p>
             <ul>
-              <li>JAMB Cut-off Mark: ${data.schoolrequirement.jamb}</li>
-              <li>JAMB: ${data.admission.jambPercentage}%</li>
-              <li>O'Level: ${data.admission.oLevelPercentage}%</li>
-              <li>PUTME: ${data.schoolrequirement.postUtme}%</li>
-              <li>Application Deadline: ${data.admission.applicationDeadline}</li>
+              <li>JAMB Cut-off Mark: ${data.data.schoolrequirement?.jamb ? `${data.data.schoolrequirement.jamb}%` : 'N/A'}</li>
+            <li>O'Level: ${data.data.schoolrequirement?.oLevelPercentage ? `${data.data.schoolrequirement.oLevelPercentage}%` : 'N/A'}</li>
+               <li>PUTME: ${data. data .schoolrequirement?.postUtme ? `${data.data.schoolrequirement.postUtme}%` :' N/A' }</li>
+           
             </ul>
           
             <h2>Warnings</h2>
-            <p>${data.admission.warnings}</p>
-          `;
+                 <p>
+                    The ${data.data.schoolName} does not require any payment for
+                    admission processing and does not use any agents for
+                    admissions. Prospective students are advised not to deal
+                    with touts. Submission of forged documents will result in
+                    the forfeiture of admission upon discovery.
+                  </p>
+                `;
 
           document.querySelector("#student-life .container ul").innerHTML = `
           <li>Sports and Recreation</li>
