--- a/examination.html
+++ b/examination.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lerniio Dashboard</title>
+    <title>Examinations Dashboard</title>
     <link rel="stylesheet" href="Dashboard.css" />
     <link rel="stylesheet" href="examination.css" />
     <!-- the google fonts -->
