--- a/Dashboard.html
+++ b/Dashboard.html
@@ -80,7 +80,7 @@
                             <li>
                                 <img src="./asset/exam-svgrepo-com.svg" alt="">
                                 <a href="./examination.html">Examination</a>
-                            </li>    
+                            </li>     
                         </ul>
                     </nav>
                 </div>
@@ -90,7 +90,7 @@
             <ul>
                 <li>
                     <img src="./asset/help-desk-log-svgrepo-com.svg" alt="">
-                    <a href="#">help</a>
+                    <a href="./help.html">help</a>
                 </li>
                 <li>
                     <img src="./asset/log-out-svgrepo-com.svg" alt="">
